FIX: getAllApplicants method